# Beauvoir

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Todo.md  build.bat  build.sh
demo/: README.md  collider_test.c  empty_game.c  image_viewer.c  memory_test.c
demo/empty/: CMakeLists.txt  empty.c
demo/image_viewer/: CMakeLists.txt  image_viewer.c  scene.tif  shader.glsl
demo/scene/: CMakeLists.txt  monochrome.glsl  scene.c
include/: linmath.h  nuklear.h  nuklear_sdl_gles2.h  zconf.h
include/BVR/: actors.h  assets.h  audio.h  buffer.h  bvr.h  config.h  file.h  graphics.h  gui.h  image.h  internal.h  math.h  mesh.h  physics.h  scene.h  shader.h  utils.h  window.h
include/BVR/editor/: editor.h  flags.h  renderer.h
include/GLAD/: glad.h
include/SDL3/: SDL_revision.h
lib/: SDL3.lib  SDL3_test.lib  libpng16_staticd.lib  libpng16d.lib  portaudio.lib  zd.lib  zsd.lib
lib/pkgconfig/: libpng.pc  portaudio-2.0.pc  sdl3.pc
res/: framebuffer.glsl  hands.psd  monochrome.glsl  shader.glsl  sphere.glb  texture.psd  texture.tga
src/: actors.c  assets.c  audio.c  buffer.c  file.c  glad.c  graphics.c  gui.c  image.c  mesh.c  physics.c  scene.c  shader.c  utils.c  window.c
src/editor/: editor.c  io.c  renderer.c
